# opengl

./: CMakeLists.txt  bld.bat  cmake.bat  opengl.c  opengl.cpp
